--- a/src/component/Collection.module.css
+++ b/src/component/Collection.module.css
@@ -538,6 +538,7 @@
 
     .loadingAnimation{
       transform: scale(0.67);
+      top: 150px;
     }
 
   }
