--- a/src/page/Dashboard.module.css
+++ b/src/page/Dashboard.module.css
@@ -17,5 +17,6 @@
 @media screen and (max-width: 810px){
     .loadingAnimation{
         transform: scale(0.67);
+        top: 150px;
       }
 }
