--- a/src/page/NotePage.module.css
+++ b/src/page/NotePage.module.css
@@ -396,6 +396,7 @@
 
     .loadingAnimation{
         transform: scale(0.67);
+        top: 150px;
       }
 
     .labels {
